Lessons/NetworkPolicy/kodekloud/external.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    name: external
  name: external
  namespace: default
spec:
  containers:
  - env:
    - name: APP_NAME
      value: External Facing Application
    - name: BG_COLOR
      value: red
    image: kodekloud/webapp-conntest
    imagePullPolicy: IfNotPresent
    name: external
    ports:
    - containerPort: 8080
      protocol: TCP
