Lessons/NetworkPolicy/kodekloud/mysql.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    name: mysql
  name: mysql
  namespace: default
spec:
  containers:
  - env:
    - name: MYSQL_ROOT_PASSWORD
      value: paswrd
    image: mysql
    imagePullPolicy: IfNotPresent
    name: mysql
    ports:
    - containerPort: 3306
      protocol: TCP
