Lessons/NetworkPolicy/kodekloud/payroll-policy-kodekloud.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: payroll-policy
  namespace: default
spec:
  policyTypes:
  - Ingress
  ingress:
  podSelector:
    matchLabels:
      name: payroll
  - from:
    - podSelector:
        matchLabels:
          name: internal
    ports:
    - port: 8080
      protocol: TCP
